Execute blocking OCC status queries in own thread
Querying some of the OCC status parameters (i2c) takes long time and it was
blocking other parts of code. Thus it was moved into custom thread with the long
lasting call not locking the rest of the driver.

--- a/ned/nedApp/Db/ned.template
+++ b/ned/nedApp/Db/ned.template
@@ -220,3 +220,17 @@ record(longin, "$(P)$(R)CopyBufUtil")
     field(SCAN, "1 second")
     field(EGU,  "%")
 }
+record(ao, "$(P)$(R)StatusInt")
+{
+    field(DESC, "Basic status update interval")
+    field(DTYP, "asynFloat64")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))StatusInt")
+    field(EGU,  "seconds")
+}
+record(ao, "$(P)$(R)ExtStatusInt")
+{
+    field(DESC, "Extended status update interval")
+    field(DTYP, "asynFloat64")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ExtStatusInt")
+    field(EGU,  "seconds")
+}
