--- a/ned/nedApp/Db/FemPlugin.template
+++ b/ned/nedApp/Db/FemPlugin.template
@@ -1328,6 +1328,246 @@ record(bo, "$(P)$(R)Ch1FifoNE")
     field(ZNAM, "empty")
     field(ONAM, "has data")
 }
+record(bo, "$(P)$(R)CmdFifoAF")
+{
+    field(DESC, "CMD FIFO almost full")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CmdFifoAF")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "no")
+    field(ONAM, "yes")
+}
+record(bo, "$(P)$(R)CmdFifoNE")
+{
+    field(DESC, "CMD FIFO has data")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CmdFifoNE")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "empty")
+    field(ONAM, "has data")
+}
+record(bo, "$(P)$(R)CmdInFifAF")
+{
+    field(DESC, "CMD input FIFO almost full")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CmdInFifAF")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "no")
+    field(ONAM, "yes")
+}
+record(bo, "$(P)$(R)CmdInFifNE")
+{
+    field(DESC, "CMD input FIFO has data")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CmdInFifNE")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "empty")
+    field(ONAM, "has data")
+}
+record(bo, "$(P)$(R)CtrlFifoAF")
+{
+    field(DESC, "CTRL FIFO almost full")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CtrlFifoAF")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "no")
+    field(ONAM, "yes")
+}
+record(bo, "$(P)$(R)CtrlFifoNE")
+{
+    field(DESC, "CTRL FIFO has data")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))CtrlFifoNE")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "empty")
+    field(ONAM, "has data")
+}
+record(bo, "$(P)$(R)Ch10FifoAF")
+{
+    field(DESC, "Chan10 FIFO almost full")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch10FifoAF")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "no")
+    field(ONAM, "yes")
+}
+record(bo, "$(P)$(R)Ch10FifoNE")
+{
+    field(DESC, "Chan10 FIFO has data")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch10FifoNE")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "empty")
+    field(ONAM, "has data")
+}
+record(bo, "$(P)$(R)Ch9FifoAF")
+{
+    field(DESC, "Chan9 FIFO almost full")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch9FifoAF")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "no")
+    field(ONAM, "yes")
+}
+record(bo, "$(P)$(R)Ch9FifoNE")
+{
+    field(DESC, "Chan9 FIFO has data")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch9FifoNE")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "empty")
+    field(ONAM, "has data")
+}
+record(longout, "$(P)$(R)FilterdResp")
+{
+    field(DESC, "Filtered responses")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))FilterdResp")
+    field(SCAN, "I/O Intr")
+}
+record(mbbo, "$(P)$(R)SysrstB")
+{
+    field(DESC, "Sysrst_B low/high detected")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))SysrstB")
+    field(SCAN, "I/O Intr")
+    field(ZRVL, "0")
+    field(ZRST, "empty")
+    field(ONVL, "1")
+    field(ONST, "low - not ok")
+    field(TWVL, "2")
+    field(TWST, "high")
+    field(THVL, "3")
+    field(THST, "low and high - n")
+}
+record(mbbo, "$(P)$(R)TxEnable")
+{
+    field(DESC, "TXEN low/high detected")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))TxEnable")
+    field(SCAN, "I/O Intr")
+    field(ZRVL, "0")
+    field(ZRST, "empty")
+    field(ONVL, "1")
+    field(ONST, "low")
+    field(TWVL, "2")
+    field(TWST, "high - not ok")
+    field(THVL, "3")
+    field(THST, "low and high - n")
+}
+record(mbbo, "$(P)$(R)Tsync")
+{
+    field(DESC, "TSYNC")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Tsync")
+    field(SCAN, "I/O Intr")
+    field(ZRVL, "0")
+    field(ZRST, "empty")
+    field(ONVL, "1")
+    field(ONST, "low - not ok")
+    field(TWVL, "2")
+    field(TWST, "high - not ok")
+    field(THVL, "3")
+    field(THST, "low and high")
+}
+record(mbbo, "$(P)$(R)Tclk")
+{
+    field(DESC, "TCLK")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Tclk")
+    field(SCAN, "I/O Intr")
+    field(ZRVL, "0")
+    field(ZRST, "empty")
+    field(ONVL, "1")
+    field(ONST, "low - not ok")
+    field(TWVL, "2")
+    field(TWST, "high - not ok")
+    field(THVL, "3")
+    field(THST, "low and high")
+}
+record(longout, "$(P)$(R)HwIdCnt")
+{
+    field(DESC, "Hardware ID count")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))HwIdCnt")
+    field(SCAN, "I/O Intr")
+}
+record(mbbo, "$(P)$(R)Mlos4")
+{
+    field(DESC, "MLOS1")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Mlos4")
+    field(SCAN, "I/O Intr")
+    field(ZRVL, "0")
+    field(ZRST, "empty")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
+}
+record(mbbo, "$(P)$(R)Mlos3")
+{
+    field(DESC, "MLOS2")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Mlos3")
+    field(SCAN, "I/O Intr")
+    field(ZRVL, "0")
+    field(ZRST, "empty")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
+}
+record(mbbo, "$(P)$(R)Mlos2")
+{
+    field(DESC, "MLOS3")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Mlos2")
+    field(SCAN, "I/O Intr")
+    field(ZRVL, "0")
+    field(ZRST, "empty")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
+}
+record(mbbo, "$(P)$(R)Mlos1")
+{
+    field(DESC, "MLOS4")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Mlos1")
+    field(SCAN, "I/O Intr")
+    field(ZRVL, "0")
+    field(ZRST, "empty")
+    field(ONVL, "1")
+    field(ONST, "always low")
+    field(TWVL, "2")
+    field(TWST, "always high")
+    field(THVL, "3")
+    field(THST, "low and high")
+}
+record(bo, "$(P)$(R)LvdsVerf")
+{
+    field(DESC, "Detected LVDS verify")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))LvdsVerf")
+    field(SCAN, "I/O Intr")
+    field(ZNAM, "no")
+    field(ONAM, "yes")
+}
+record(longout, "$(P)$(R)EepromCode")
+{
+    field(DESC, "EEPROM code")
+    field(DTYP, "asynInt32")
+    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))EepromCode")
+    field(SCAN, "I/O Intr")
+}
 record(mbbo, "$(P)$(R)LvdsDin6")
 {
     field(DESC, "LVDS_DIN6")
@@ -1758,16 +1998,6 @@ record(bo, "$(P)$(R)VerboseRsp")
     field(VAL,  "0")
     field(ZNAM, "disable")
     field(ONAM, "enable")
-}
-record(bo, "$(P)$(R)Ch10Disable")
-{
-    field(DESC, "Chan10 disable")
-    field(DTYP, "asynInt32")
-    field(OUT,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))Ch10Disable")
-    field(SCAN, "I/O Intr")
-    field(VAL,  "0")
-    field(ZNAM, "enable")
-    field(ONAM, "disable")
 }
 record(bo, "$(P)$(R)Ch10Disable")
 {
