Modified AdaraPlugin to support multiple DSPs
In the environment where DSPs are daisy-chanined together,
they should be distinguished by different source id when presented to SMS.
We also split neutron and metadata into two streams identified by source id.
The new mechanism takes number of DSPs as a parameter and assigns
incremental source ids to neutron and metadata stream of each DSP.

For code optimization purposes, upper limit for number of DSPs has been set
to 10 which should be plenty.

--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -20,6 +20,7 @@ DB += FemPlugin.template
 DB += DumpPlugin.template
 DB += StatPlugin.template
 DB += RtdlPlugin.template
+DB += AdaraPlugin.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
