Support for ROC versions split into files
Status and configuration parameters for ROC versions have been split into
one file per version. It's easy to parse by EPICS database generation tools
and simple to compare parameter changes between versions.

Module version PVs naming convention is now common for all modules. Each
module is still responsible for populating those since OCC READ_VERSION
commands are different based on module type.

--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -12,8 +12,9 @@ include $(TOP)/configure/CONFIG
 # databases, templates, substitutions like this
 DB += ned.template
 DB += BasePlugin.template
-DB += DiscoverPlugin.template
 DB += BaseSocketPlugin.template
+DB += BaseModulePlugin.template
+DB += DiscoverPlugin.template
 DB += DspPlugin.template
 DB += RocPlugin.template
 DB += FemPlugin.template
