--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -18,6 +18,7 @@ DB += DiscoverPlugin.template
 DB += DspPlugin.template
 DB += RocPlugin_v51.template
 DB += RocPlugin_v52.template
+DB += RocHv.template
 DB += FemPlugin.template
 DB += DumpPlugin.template
 DB += StatPlugin.template
