--- a/ned/nedApp/Db/ROCHV.template
+++ b/ned/nedApp/Db/ROCHV.template
@@ -3,7 +3,19 @@
 # includes using the hardware unit conversions and slew rate limits.  
 #
 
-record(ai, "$(P)$(R)HVRampRate") {
+
+#
+# Summary alarm status
+#
+record(calc, "$(S):AlarmSum") {
+   field(CALC, "1")
+   field(INPA, "$(S):Volt CP MS")
+   field(INPB, "$(S):Curr CP MS")
+   field(INPD, "$(S):CommAlarm CP MS")
+   info(archive, "Monitor, 00:00:10, VAL")
+}
+
+record(ai, "$(P):RampRate") {
    field(DTYP, "stream")
    field(DESC, "Readback ramp rate")
    field(INP, "@ROCHV.proto getNum(RR) $(PORT) $(ADDR)")
@@ -17,7 +29,7 @@ record(ai, "$(P)$(R)HVRampRate") {
 # I suspect that the ramp rate is only effective if you use the requested HV
 # control, rather than the raw DAC control. milliseconds/step.
 #
-record(ao, "$(P)$(R)HVRampRateSet") {
+record(ao, "$(P):RampRateSet") {
    field(DTYP, "stream")
    field(DESC, "Set ramp rate")
    field(OUT, "@ROCHV.proto setNum(RR) $(PORT) $(ADDR)")
@@ -26,7 +38,7 @@ record(ao, "$(P)$(R)HVRampRateSet") {
    field(DRVH, "255")
    field(LOPR, "0")
    field(DRVL, "0")
-   field(FLNK, "$(P)$(R)HVRampRate")
+   field(FLNK, "$(P):RampRate")
 }
 
 #
@@ -34,7 +46,7 @@ record(ao, "$(P)$(R)HVRampRateSet") {
 # In this case it may not be used at all, or only for a crash off.  Therefore
 # this ao record does not convert.
 #
-record(ao, "$(P)$(R)HVDACSet") {
+record(ao, "$(P):DACSet") {
    field(DTYP, "stream")
    field(DESC, "Set DAC")
    field(OUT, "@ROCHV.proto setNum(&) $(PORT) $(ADDR)")
@@ -51,7 +63,7 @@ record(ao, "$(P)$(R)HVDACSet") {
 # for the converted value, so no conversion is done here. do we need to scan
 # it at all?
 #
-record(ai, "$(P)$(R)HVReadADC") {
+record(ai, "$(P):ReadADC") {
    field(DTYP, "stream")
    field(DESC, "Read raw voltage")
    field(SCAN, "1 second")
@@ -64,7 +76,7 @@ record(ai, "$(P)$(R)HVReadADC") {
 #
 # Requested output in volts
 #
-record(ao, "$(P)$(R)HVVoltSet") {
+record(ao, "$(P):VoltSet") {
    field(DTYP, "stream")
    field(DESC, "Requested voltage setpoint")
    field(OUT, "@ROCHV.proto setNum(#) $(PORT) $(ADDR)")
@@ -78,13 +90,14 @@ record(ao, "$(P)$(R)HVVoltSet") {
 #
 # Voltage Readback in volts. 
 #
-record(ai, "$(P)$(R)HVVolts") {
+record(ai, "$(P):Volt") {
    field(DTYP, "stream")
    field(DESC, "Readback in volts")
-   field(inp, "@ROCHV.proto getNum(LV) $(PORT) $(ADDR)")
+   field(INP, "@ROCHV.proto getNum(LV) $(PORT) $(ADDR)")
    field(LOPR, "-100")
    field(HOPR, "2300")
    field(EGU, "V")
+   info(autosaveFields, "HIGH LOW")
    field(SCAN, "1 second")
 }
 
@@ -93,32 +106,36 @@ record(ai, "$(P)$(R)HVVolts") {
 # Converted current readback is in one document but not in legacy code.
 # Also there are conversion parameters in the document, but not the code.
 #
-#record(ai, "$(P)$(R)HVCurrent") {
+#record(ai, "$(P):Current") {
 #   field(DTYP, "stream")
 #   field(DESC, "converted current Readback")
-#   field(inp, "@ROCHV.proto getNum(LC) $(PORT) $(ADDR))
+#   field(INP, "@ROCHV.proto getNum(LC) $(PORT) $(ADDR))
 #   field(EGU, "ma")
 #   field(SCAN, "1 second")
 #}
 
 #
-# Raw Current readback
+# Current readback.  Do it the ordinary EPICS way.  Don't know ESLO yet.
 #
-record(ai, "$(P)$(R)HVRawCurrent") {
+record(ai, "$(P):Curr") {
    field(DTYP, "stream")
-   field(DESC, "raw current Readback")
-   field(inp, "@ROCHV.proto getNum(RC) $(PORT) $(ADDR)")
-   field(EGU, "counts")
+   field(DESC, "Current Readback")
+   field(INP, "@ROCHV.proto getNum(RC) $(PORT) $(ADDR)")
+   field(LINR, "SLOPE")
+   field(ESLO, "1")
+   field(EOFF, "0")
+   field(EGU, "ma")
+   info(autosaveFields, "HIGH LOW")
    field(SCAN, "1 second")
 }
 
 #
 # Max Voltage readback. Presumeably just reflects setpoint 
 #
-record(ai, "$(P)$(R)HVMaxV") {
+record(ai, "$(P):MaxV") {
    field(DTYP, "stream")
    field(DESC, "maximum voltage Readback")
-   field(inp, "@ROCHV.proto getNum(MV) $(PORT) $(ADDR)")
+   field(INP, "@ROCHV.proto getNum(MV) $(PORT) $(ADDR)")
    field(PINI, "YES")
    field(EGU, "V")
 }
@@ -126,7 +143,7 @@ record(ai, "$(P)$(R)HVMaxV") {
 #
 # set max voltage.  Presumeably this is in volts, not raw DAC counts...
 #
-record(ao, "$(P)$(R)HVMaxVSet") {
+record(ao, "$(P):MaxVSet") {
    field(DTYP, "stream")
    field(DESC, "Requested voltage limit")
    field(OUT, "@ROCHV.proto setNum(M) $(PORT) $(ADDR)")
@@ -135,13 +152,13 @@ record(ao, "$(P)$(R)HVMaxVSet") {
    field(DRVH, "2200")
    field(HOPR, "2200")
    field(EGU, "V")
-   field(FLNK, "$(P)$(R)HVMaxV"
+   field(FLNK, "$(P):MaxV"
 }
 
 #
 # Voltage set (DAC) conversion parameters readback
 #
-record(waveform, "$(P)$(R)HVVSetConv") {
+record(waveform, "$(P):VSetConv") {
    field(DTYP, "stream")
    field(INP, "@ROCHV.proto getCAL(CD) $(PORT) $(ADDR)")
    field(FTVL, "ULONG")
@@ -151,17 +168,17 @@ record(waveform, "$(P)$(R)HVVSetConv") {
 #
 # Voltage set (DAC) conversion parameters set
 #
-record(waveform, "$(P)$(R)HVVSetConvSet") {
+record(waveform, "$(P):VSetConvSet") {
    field(DTYP, "stream")
    field(INP, "@ROCHV.proto setCAL(SD) $(PORT) $(ADDR)")
    field(FTVL, "ULONG")
    field(NELM, "3")
-   field(FLNK, "$(P)$(R)HVVSetConv")
+   field(FLNK, "$(P)VSetConv")
 }
 #
 # Voltage readback (ADC) conversion parameters readback
 #
-record(waveform, "$(P)$(R)HVVConv") {
+record(waveform, "$(P):VConv") {
    field(DTYP, "stream")
    field(INP, "@ROCHV.proto getCAL(CV) $(PORT) $(ADDR)")
    field(FTVL, "ULONG")
@@ -171,21 +188,21 @@ record(waveform, "$(P)$(R)HVVConv") {
 #
 # Voltage readback (ADC) conversion parameters set
 #
-record(waveform, "$(P)$(R)HVVConvSet") {
+record(waveform, "$(P):VConvSet") {
    field(DTYP, "stream")
    field(INP, "@ROCHV.proto setCAL(SV) $(PORT) $(ADDR)")
    field(FTVL, "ULONG")
    field(NELM, "3")
-   field(FLNK, "$(P)$(R)HVVConv")
+   field(FLNK, "$(P):VConv")
 }
 
 #
 # here we have a nice switch but the question is how to init it
 #
-record(bo, "$(P)$(R)HVEnable") {
+record(bo, "$(P):Enable") {
    field(DESC, "enable/disable switch for GUI")
    field(DTYP, "Soft Channel")
-   field(OUT, "$(P)$(R)HVEnableHW")
+   field(OUT, "$(P):EnableHW")
    field(ONAM, "ON")
    field(ZNAM, "OFF")
 }
@@ -194,7 +211,7 @@ record(bo, "$(P)$(R)HVEnable") {
 # ONAM and ZNAM look silly because they contain the actual commands to send
 # And how do you know what to set it to at the startup?
 #
-record(bo, "$(P)$(R)HVEnableHW") {
+record(bo, "$(P):EnableHW") {
    field(DESC, "hardware enable/disable")
    field(DTYP, "stream")
    field(OUT, "@ROCHV.proto sendBoCmd() $(PORT) $(ADDR)")
@@ -206,21 +223,21 @@ record(bo, "$(P)$(R)HVEnableHW") {
 #
 # Do the following controls by just sending "PROC"
 #
-record(bo, "$(P)$(R)HVDisableB") {
+record(bo, "$(P):DisableB") {
    field(DTYP, "stream")
    field(OUT, "@ROCHV.proto sendCmd(*) $(PORT) $(ADDR)")
    field(DOL, "1")
    field(ONAM, "Disable")
    field(ZNAM, "Disable")
 }
-record(bo, "$(P)$(R)HVEnableB") {
+record(bo, "$(P):EnableB") {
    field(DTYP, "stream")
    field(OUT, "@ROCHV.proto sendCmd(8) $(PORT) $(ADDR)")
    field(DOL, "1")
    field(ONAM, "Enable")
    field(ZNAM, "Enable")
 }
-record(bo, "$(P)$(R)HVClearErr") {
+record(bo, "$(P):ClearErr") {
    field(DESC, "Clear error code")
    field(DTYP, "stream")
    field(OUT, "@ROCHV.proto sendCmd(X) $(PORT) $(ADDR)")
@@ -228,7 +245,7 @@ record(bo, "$(P)$(R)HVClearErr") {
    field(ONAM, "Clear")
    field(ZNAM, "Clear")
 }
-record(bo, "$(P)$(R)HVResetDAC") {
+record(bo, "$(P):ResetDAC") {
    field(DESC, "Yes reset the DAC")
    field(DTYP, "stream")
    field(OUT, "@ROCHV.proto sendCmd(X) $(PORT) $(ADDR)")
@@ -240,30 +257,38 @@ record(bo, "$(P)$(R)HVResetDAC") {
 #
 # Get error code.  
 #
-record(waveform, "$(P)$(R)HVErrorInp") {
+record(waveform, "$(P):HVErrorInp") {
    field(DESC, "Input error byte"
    field(DTYP, "stream")
    field(OUT, "@ROCHV.proto recError() $(PORT) $(ADDR)")
    field(FTVL, "UCHAR")
    field(NELM, "2")
    field(SCAN, "I/O Intr")
-   field(FLNK, "$(P)$(R)HVErrorBits")
+   field(FLNK, "$(P):HVErrorBits")
 }
 
 #
 # convert to bits. Point byte widget to VAL or RVAL
 #
-record(mbbiDirect, "$(P)$(R)HVErrorBits") {
+record(mbbiDirect, "$(P):ErrorBits") {
    field(DESC, "Provide Error Bits")
    field(DTYP, "Raw Soft Channel")
-   field(INP, "$(P)$(R)HVErrorInp NPP MS")
-   field(FLNK, "$(P)$(R)HVClearErr")
+   field(INP, "$(P):ErrorInp NPP MS")
+   field(FLNK, "$(P):ClearErr")
+}
+
+record(bi, "$(P):CommAlarm") {
+   field(PINI, "YES")
+   field(DTYP, "Raw Soft Channel")
+   field(INP, "$(P):ErrorBits.RVAL CPP MS")
+   field(OSV, "MAJOR")
+   field(ZSV, "NO_ALARM")
 }
 
 #
 # This is for debugging
 #
-record(asyn,"$(P)$(R)HVAsynRec")
+record(asyn,"$(P):AsynRec")
 {
     field(DTYP,"asynRecordDevice")
     field(PORT,"$(PORT)")
