--- a/ned/nedApp/Db/Makefile
+++ b/ned/nedApp/Db/Makefile
@@ -19,6 +19,7 @@ DB += DspPlugin.template
 DB += RocPlugin_v51.template
 DB += RocPlugin_v52.template
 DB += RocHv.template
+DB += ROCHV.template
 DB += FemPlugin.template
 DB += DumpPlugin.template
 DB += StatPlugin.template
