Enabling plugins now only through PVs
Rather than mixing enabling plugins from C code and from EPICS database,
it's now solely in the domain of PVs. By default, all BaseModulePlugin derivates
are enabled by default and so is CmdDispatcher. Other plugins need to be enabled
manually.

--- a/ned/nedApp/Db/BaseModulePlugin.template
+++ b/ned/nedApp/Db/BaseModulePlugin.template
@@ -5,6 +5,7 @@ record(bo, "$(P)$(R)Enable")
     field(ZNAM, "No")
     field(ONAM, "Yes")
     field(VAL,  "1")
+    field(PINI, "YES")
 }
 record(longin, "$(P)$(R)ProcCount")
 {
